compiler/fir/analysis-tests/testData/resolve/KT-65044.kt
val <!UNRESOLVED_REFERENCE!>A<!>.b: <!UNRESOLVED_REFERENCE, UNRESOLVED_REFERENCE!>A<!>? by <!UNRESOLVED_REFERENCE!>A<!>.test()
